Add tooltip to remove button in task/thread sortable item

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -4,6 +4,7 @@
     "create": "Create",
     "cancel": "Cancel",
     "delete": "Delete",
+    "remove": "Remove",
     "show": "Show",
     "hide": "Hide",
     "seeMore": "See more",
