--- a/src/i18n/locales/fr.json
+++ b/src/i18n/locales/fr.json
@@ -4,6 +4,7 @@
     "create": "Créer",
     "cancel": "Annuler",
     "delete": "Supprimer",
+    "remove": "Retirer",
     "show": "Afficher",
     "hide": "Masquer",
     "seeMore": "Voir plus",
