Replace circle creation modal by new RoleSearchButton

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -170,7 +170,7 @@
       "roles": "Roles:",
       "addRole": "Add a role",
       "circles": "Circles:",
-      "addCircles": "Add a circle"
+      "addCircle": "Add a circle"
     },
     "TasksInCircleList": {
       "create": "Create a task",
