--- a/src/i18n/locales/fr.json
+++ b/src/i18n/locales/fr.json
@@ -170,7 +170,7 @@
       "roles": "Rôles :",
       "addRole": "Ajouter un rôle",
       "circles": "Cercles :",
-      "addCircles": "Ajouter un cercle"
+      "addCircle": "Ajouter un cercle"
     },
     "TasksInCircleList": {
       "create": "Créer une tâche",
