--- a/src/i18n/locales/fr.json
+++ b/src/i18n/locales/fr.json
@@ -149,6 +149,13 @@
       "createTask": "Nouvelle tâche",
       "createThread": "Nouvelle discussion"
     },
+    "MeetingAttendees": {
+      "maybe": "Peut-être",
+      "absent": "Absent(e)",
+      "present": "Présent(e)",
+      "add": "Ajouter un(e) participant(e)",
+      "confirmRemove": "Êtes vous sûr de vouloir retirer cet(te) participant(e) ?"
+    },
     "MeetingStepContent": {
       "notesPlaceholder": "Notes..."
     },
