Move meeting edit button to actions menu

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -535,9 +535,9 @@
     "MeetingContent": {
       "heading": "Meeting: {{title}}",
       "started": "Started",
+      "ended": "Ended",
       "reopen": "Reopen",
       "stop": "Stop",
-      "edit": "Edit",
       "facilitatorCurrent": "You are facilitating this meeting.",
       "facilitatorMember": "<member /> is facilitating this meeting.",
       "start": "Start",
