Improve circle and leader style in circle panel

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -99,6 +99,9 @@
       "heading": "Create a thread",
       "empty": "No thread yet"
     },
+    "CircleWithLeaderItem": {
+      "notAssigned": "Not assigned"
+    },
     "HeaderLinksMenu": {
       "settings": "Settings",
       "members": "Members",
