--- a/src/i18n/locales/fr.json
+++ b/src/i18n/locales/fr.json
@@ -548,7 +548,8 @@
       "submit": "Connexion"
     },
     "MeetingContent": {
-      "heading": "Réunion : {{title}}",
+      "title": "Réunion {{circle}} : {{title}}",
+      "heading": "Réunion <circle /> {{title}}",
       "started": "En cours",
       "ended": "Terminée",
       "reopen": "Reprendre",
